2008-02-10 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_freeAsmop): avoid NULL pointer dereference,
	  (genAssign): fixed for operands on the stack

	* device/lib/pic16/libc/stdio/vfprintf.c,
	  device/lib/pic16/configure.ac,
	  device/lib/pic16/Makefile.common: add configurable support for
	  printing floats via ./configure --enable-floats
	* device/lib/pic16/configure,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/libdev/Makefile.in,
	  device/lib/pic16/libc/Makefile.in: regenerated
	* doc/sdccman.lyx: documented float support and how to get it
	* doc/Makefile.in: fixed race condition on parallel builds

	* device/lib/pic16/libc/stdio/sprintf.c,
	  device/lib/pic16/libc/stdio/vsprintf.c: do not mess up the user's
	  pointer to the string buffer

2008-02-10 Borut Razem <borut.razem AT siol.net>

	* device/lib/printf_tiny.c: replaced non-C89 comments '//' with '/* */'

2008-02-10 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f*.h: add bit aliases in INTCONbits_t

2008-02-09 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (assignToSameBank): add force argument to ignore
	  artificial bank size limits for compound data (structs, arrays),
	  avoids assert if --obanksel=N, N > 1, is given

2009-02-09 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/asranlib.c, link/lkar.c: don't check the padding bytes since
	  the openSUSE GNU ar (GNU Binutils; openSUSE 11.0) 2.18.50.20080409-11.1
	  uses '`' character instead '\n' for padding
	* as/asranlib/asranlib.c: made it more robust

2009-02-08 Borut Razem <borut.razem AT siol.net>

	* as/COPYING3: added
	* support/scripts/sdcc.nsi: added COPYING3.txt to the package
	* device/lib/Makefile.in: reenable floating point in model-xstack-auto
	  libraries
